complite views and urls

--- a/Supplier/templates/Supplier/supplier.html
+++ b/Supplier/templates/Supplier/supplier.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>supplier</title>
-</head>
-<body style="background-color:khaki ;">
-    <h1 style="font-family: comic sans MS; color: darkmagenta; text-align: center; font-size: 450%;"> salam </h2>
-</body>
-</html>
+
+
+{% extends 'content/base.html' %}
+{% block content %}
+<h1 style="font-family: comic sans MS; color: darkmagenta; text-align: center; font-size: 450%;"> salam </h1>
+<h1 style="font-family: comic sans MS; color: darkmagenta; text-align: center; font-size: 450%;"> supplier ha mian inja </h1>
+
+{% endblock %}
+
+
+
+
+
 
