--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,8 +8,9 @@
     font-weight: normal;
   }
 
-  body {
+  /* body nav {
     direction: rtl;
     font-family: Shabnam;
-    /* background-color: rgb(219, 226, 226); */
-  }
+    /* background-color: rgb(219, 226, 226);
+  } */
+
