--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,9 +8,9 @@
     font-weight: normal;
   }
 
-  /* body nav {
+  body {
     direction: rtl;
     font-family: Shabnam;
-    /* background-color: rgb(219, 226, 226);
-  } */
+    /* /* background-color: rgb(219, 226, 226); */
+  }
 
