--- a/content/templates/content/categories.html
+++ b/content/templates/content/categories.html
@@ -1,91 +1,160 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <head>
-<style>
-* {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
+  {% comment %}
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"
+  />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script> {% endcomment %}
 
-/* Style the tab */
-.tab {
-  float: right;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  width: 30%;
-  height: 300px;
-}
+<script>function openCity(evt, cityName) {
+    var i,
+    tabcontent,
+    tablinks;
+    tabcontent=document.getElementsByClassName("tabcontent");
 
-/* Style the buttons inside the tab */
-.tab button {
-  display: block;
-  background-color: inherit;
-  color: black;
-  padding: 22px 16px;
-  width: 100%;
-  border: none;
-  outline: none;
-  text-align: right;
-  cursor: pointer;
-  transition: 0.3s;
-  font-size: 17px;
-}
+    for (i=0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display="none";
+    }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
+    tablinks=document.getElementsByClassName("tablinks");
 
-/* Create an active/current "tab button" class */
-.tab button.active {
-  background-color: #ccc;
-}
+    for (i=0; i < tablinks.length; i++) {
+      tablinks[i].className=tablinks[i].className.replace(" active", "");
+    }
 
-/* Style the tab content */
-.tabcontent {
-  float: right;
-  padding: 0px 12px;
-  border: 1px solid #ccc;
-  width: 70%;
-  border-right: none;
-  height: 300px;
-}
-</style>
+    document.getElementById(cityName).style.display="block";
+    evt.currentTarget.className+=" active";
+  }
+
+  // Get the element with id="defaultOpen" and click on it
+  document.getElementById("defaultOpen").click();</script>
+  <style>
+    * {
+      box-sizing: border-box
+    }
+
+
+
+    /*body {
+        font-family: "Lato", sans-serif;
+      }*/
+
+
+
+    /* Style the tab */
+    .tab {
+      float: right;
+      border: 1px solid #ccc;
+      background-color: #f1f1f1;
+      width: 20%;
+      height: calc(100vh - 60px);
+    }
+
+    /* Style the buttons inside the tab */
+    .tab button {
+      display: block;
+      background-color: inherit;
+      color: black;
+      padding: 22px 16px;
+      width: 100%;
+      border: none;
+      outline: none;
+      text-align: right;
+      cursor: pointer;
+      transition: 0.3s;
+      font - size: 17px;
+    }
+
+    /* Change background color of buttons on hover */
+    .tab button:hover {
+      background-color: #ddd;
+    }
+
+    /* Create an active/current "tab button" class */
+    .tab button.active {
+      background-color: #ccc;
+    }
+
+    /* Style the tab content */
+    .tabcontent {
+      float: right;
+      padding: 0px 12px;
+      border: 1px solid #ccc;
+      width: 80%;
+      border-right: none;
+      height:calc(100vh - 60px);
+    }
+  </style>
 </head>
+
 <body>
+  <div class="tab"> {% for cat in main_cats %}
 
-<h2>Vertical Tabs</h2>
-<p>Click on the buttons inside the tabbed menu:</p>
+    <button
+      class="tablinks"
+      onclick="openCity(event, '{{ cat.cat_name }}')"
+      {% if forloop.first%}
+      id="defaultOpen"
+      {% endif %}
+    > {{ cat.cat_name }}
 
-<div class="tab">
-{% for cat in main_cats %}
-  <button class="tablinks" onclick="openCity(event, '{{ cat.cat_name }}'')" >{{ cat.cat_name }}</button>
-{% endfor %}
-</div>
-{% for cat in main_cats %}
-<div id="{{ cat.cat_name }}" class="tabcontent">
-  <h3>{{ cat.cat_name }}</h3>
-  {% comment %} <p>London is the capital city of England.</p> {% endcomment %}
-</div>
-{% endfor %}
+      </button>
+        {%comment%}
+      {%empty%}
+      <li
+    >Sorry,no subcategories and products in this category. </li>
+      {%endcomment%}
+      {%endfor%}
+  </div>
+  {% for cat in main_cats %}
+  <div
+    id="{{ cat.cat_name }}"
+    class="tabcontent"
+  >
+    <div class="my-slider">
+      <div>a </div>
+      <div>b </div>
+      <div>c </div>
+    </div>
+    {% for cat2 in all_cats %}
+    {% if cat2.parent_category == cat %}
+    <div
+      class="card"
+      style="width: 18rem;"
+    >
+      <img
+        src="..."
+        class="card-img-top"
+        alt="..."
+      >
+      <div class="card-body">
+        <h5 class="card-title">
+          {{ cat2.cat_name }}
 
+        </h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card 's
+          content. </p>
+      </div>
+      <ul class="list-group list-group-flush">
+        {% for cat3 in all_cats %}
 
+        {% if cat3.parent_category == cat2 %}
 
-<script>
-function openCity(evt, cityName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
+        <li class="list-group-item">
+          <a href="#"> {{ cat3.cat_name }}
 
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
-{% endblock %}
+          </a>
+        </li>
+        {%endif%}
+        {%endfor%}
+      </ul>
+    </div>
+    {%endif %}
+    {%endfor%}
+  </div>
+  {%endfor%}
+  {%endblock%}
