--- a/content/templates/content/categories.html
+++ b/content/templates/content/categories.html
@@ -5,28 +5,30 @@
 <head>
 
 
-<script>function openCity(evt, cityName) {
-    var i,
-    tabcontent,
-    tablinks;
-    tabcontent=document.getElementsByClassName("tabcontent");
+  <script>
+    function openCity(evt, cityName) {
+      var i,
+        tabcontent,
+        tablinks;
+      tabcontent = document.getElementsByClassName("tabcontent");
 
-    for (i=0; i < tabcontent.length; i++) {
-      tabcontent[i].style.display="none";
+      for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+      }
+
+      tablinks = document.getElementsByClassName("tablinks");
+
+      for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+      }
+
+      document.getElementById(cityName).style.display = "block";
+      evt.currentTarget.className += " active";
     }
 
-    tablinks=document.getElementsByClassName("tablinks");
-
-    for (i=0; i < tablinks.length; i++) {
-      tablinks[i].className=tablinks[i].className.replace(" active", "");
-    }
-
-    document.getElementById(cityName).style.display="block";
-    evt.currentTarget.className+=" active";
-  }
-
-  // Get the element with id="defaultOpen" and click on it
-  document.getElementById("defaultOpen").click();</script>
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+  </script>
   <style>
     * {
       box-sizing: border-box
@@ -81,7 +83,7 @@
       border: 1px solid #ccc;
       width: 80%;
       border-right: none;
-      height:calc(100vh - 60px);
+      height: calc(100vh - 60px);
     }
   </style>
 </head>
@@ -97,68 +99,65 @@
       {% endif %}
     > {{ cat.cat_name }}
 
-      </button>
-        {%comment%}
-      {%empty%}
-      <li
-    >Sorry,no subcategories and products in this category. </li>
-      {%endcomment%}
-      {%endfor%}
+    </button>
+    {%comment%}
+    {%empty%}
+    <li>Sorry,no subcategories and products in this category. </li>
+    {%endcomment%}
+    {%endfor%}
   </div>
   {% for cat in main_cats %}
   <div
     id="{{ cat.cat_name }}"
     class="tabcontent"
   >
-    
+
     <div class="owl-carousel owl-theme">
-    {% for cat2 in all_cats %}
-    {% if cat2.parent_category == cat %}
-    <div class="item">
-<div
-      class="card"
-      style="width: 18rem;"
-    >
-      <img
-        src="..."
-        class="card-img-top"
-        alt="..."
-      >
-      <div class="card-body">
-        <h5 class="card-title">
-          {{ cat2.cat_name }}
+      {% for cat2 in all_cats %}
+      {% if cat2.parent_category == cat %}
+      <div class="item">
+        <div class="card">
+          <img
+            src="..."
+            class="card-img-top"
+            alt="..."
+          >
+          <div class="card-body">
+            <h5 class="card-title">
+              {{ cat2.cat_name }}
 
-        </h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card 's
-          content. </p>
+            </h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card 's
+              content. </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            {% for cat3 in all_cats %}
+
+            {% if cat3.parent_category == cat2 %}
+
+            <li class="list-group-item">
+              <a href="#"> {{ cat3.cat_name }}
+
+              </a>
+            </li>
+            {%endif%}
+            {%endfor%}
+          </ul>
+        </div>
       </div>
-      <ul class="list-group list-group-flush">
-        {% for cat3 in all_cats %}
 
-        {% if cat3.parent_category == cat2 %}
-
-        <li class="list-group-item">
-          <a href="#"> {{ cat3.cat_name }}
-
-          </a>
-        </li>
-        {%endif%}
-        {%endfor%}
-      </ul>
+      {%endif %}
+      {%endfor%}
     </div>
+  </div>
 
-{%endif %}
-    {%endfor%}
-     </div>
-    </div>
-    
-</div>
+  </div>
 
-    
-    
-    
-    
- 
+
+
+
+
+
   {%endfor%}
- 
+
   {%endblock%}
