--- a/templates/base.html
+++ b/templates/base.html
@@ -178,10 +178,25 @@
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
      <script>
   $(document).ready(function(){
-  $('.owl-carousel').owlCarousel({
 
-       rtl:true,
-  });
+   $('.owl-carousel').owlCarousel({
+     rtl:true,
+     loop:false,
+     margin:10,
+     nav:true,
+     responsive:{
+         0:{
+             items:1
+         },
+         600:{
+             items:3
+         },
+         1000:{
+             items:5
+         }
+     }
+ })
+
 });
 </script>
   </body>
