some style again

--- a/content/templates/content/categories.html
+++ b/content/templates/content/categories.html
@@ -118,7 +118,7 @@
       {% for cat2 in all_cats %}
       {% if cat2.parent_category == cat %}
       <div class="item">
-        <div class="card">
+        <div class="card" style="min-height: 370px !important;">
           <img
             src="{% static 'img/noimage.jpeg' %}"
             class="card-img-top"
