--- a/content/templates/content/categories.html
+++ b/content/templates/content/categories.html
@@ -137,7 +137,7 @@
             {% if cat3.parent_category == cat2 %}
 
             <li class="list-group-item">
-              <a href="#"> {{ cat3.cat_name }}
+              <a href="{% url 'content:products' cat3.id %}"> {{ cat3.cat_name }}
 
               </a>
             </li>
