style products page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,8 +21,9 @@
   text-align: right !important;
   border: 1px solid #ddd;
   background-color: #fff !important;
-  padding: 0px 20px;
+  padding: 20px 20px;
   display: block !important;
+  min-height: 380px;
 
   color: #444 !important;
   text-decoration: none !important;
@@ -33,19 +34,27 @@
   z-index: 11;
 }
 .pcard button{
-  background-color: #ef394e;
-    font-family: Shabnam;
-    color: #fff;
-    position: relative;
-    font-size: 11px;
-    border: none !important;
-    padding: 10px 30px;
-    border-radius: 10px;
-    margin-bottom: 0 !important;
-    margin: 20px 0;
+  background-color: #146500;
+  font-family: Shabnam;
+  color: #fff;
+  position: absolute;
+  bottom: 35px;
+  font-size: 11px;
+  border: none !important;
+  padding: 10px 30px;
+  border-radius: 6px;
+  margin-bottom: 0 !important;
+  margin: 20px 0;
 }
 .pcard ul li {
   font-weight: bold;
   text-align: left;
   list-style: none
+}
+.pcard img{
+  height: 200px;
+}
+
+.mbottom-30{
+  margin-bottom: 30px;
 }
