--- a/static/css/404.css
+++ b/static/css/404.css
@@ -4,7 +4,6 @@ FULL SCREEN MODE: http://salehriaz.com/404Page/404.html
 
 DRIBBBLE: https://dribbble.com/shots/4330167-404-Page-Lost-In-Space
 */
-
 @import url('https://fonts.googleapis.com/css?family=Dosis:300,400,500');
 
 @-moz-keyframes rocket-movement { 100% {-moz-transform: translate(1200px,-600px);} }
@@ -65,13 +64,12 @@ html, body{
 }
 
 .bg-purple{
-    background: url(http://salehriaz.com/404Page/img/bg_purple.png);
+    background:url('/static/img/bg_purple.png');
     background-repeat: repeat-x;
     background-size: cover;
     background-position: left top;
     height: 100%;
-    overflow: hidden;
-    
+    overflow: hidden;    
 }
 
 .custom-navbar{
@@ -86,7 +84,6 @@ html, body{
 
 .navbar-links{
     display: inline-block;
-    float: right;
     margin-right: 15px;
     text-transform: uppercase;
     
@@ -208,9 +205,7 @@ li a:hover {
 */
 }
 
-.earth-moon{
-    
-}
+
 
 .object_astronaut{
     animation: rotate-astronaut 200s infinite linear both alternate;
