--- a/content/templates/content/products.html
+++ b/content/templates/content/products.html
@@ -3,35 +3,74 @@
 {% block content %}
 {% load static %}
 
-<h1>
+{% comment %} <h1>
   {{ cat.cat_name }}
-</h1>
+</h1> {% endcomment %}
 <div class="container-fluid">
+
+
+  <div
+    class="row"
+    style="background-color: #f5f5f5;"
+  >
+    <div class="col-md-12">
+      <ul class="top-list">
+        <li>
+          <a href="{% url 'content:home' %}">بی دی مارکت</a>
+          <span>/</span></li>
+        {% for cat in catlst %}
+        {% if not forloop.last %}
+        <li><a href="{% url 'content:products' cat.id %}">{{ cat.cat_name }}</a> <span>/</span></li>
+        {% else %}
+        <li>{{ cat.cat_name }}</li>
+        {% endif %}
+        {% endfor %}
+
+      </ul>
+    </div>
+  </div>
+
+
   <div class="row">
 
-    <div class="col-md-2">
+    <div class="col-md-2" style="direction: rtl;">
 
-    <form action="{% url 'my_url' %}?get_parameter_name={{ tag_name }}"" method="POST">
-      {% for attr in cat.attr.all %}
-      <p>{{ attr.attr_title }}: 
-      <ul class="text-list">
-      {% for pro_attr in attr.pro_attr.all %}
-      <li>
-      <input type='checkbox' name='{{ attr.attr_title }}' value=/
-                  {% if pro_attr.value_type == 'BOOL' %}
-                  {{ pro_attr.bool_value }}
-                  {% elif pro_attr.value_type == 'INT' %}
-                  {{ pro_attr.int_value }} 
-                  {% elif pro_attr.value_type == 'TXT' %}
-                  {{ pro_attr.text_value }}
-                  {% endif %}
-  />
-                </li>
-      {% endfor %}
-      </ul>
-      </p>
-      {% endfor %}
-      </form>
+       <form class="form-filter"
+        action="{% url 'content:products' cat.id %}" 
+        method="GET"
+      >
+      <!-- ?get_parameter_name='{{ tag_name }}' -->
+        {% for attr in cat.attr.all %}
+        <br>{{ attr.attr_title }}
+        
+        
+          <ul class="pright-0">
+            {% for pro_attr in attr.pro_attr.all %}
+            <li class="form-group">
+              
+                {% if pro_attr.value_type == "BOOL" %}
+                {% if pro_attr.bool_value %}
+                  <input type="checkbox" id="{{ attr.attr_title }}" name="{{ attr }}" value="True">
+                  <label for="{{ attr.attr_title }}">دارد</label>
+                {% else %}
+                  <input type="checkbox" id="{{ attr.attr_title }}" name="{{ attr }}" value="False">
+                  <label for="{{ attr.attr_title }}">ندارد</label>
+                {% endif %}
+                {% elif pro_attr.value_type == 'INT' %}
+                  <input type="checkbox" id="{{ attr.attr_title }}" name="{{ attr }}" value="{{ pro_attr.int_value }}">
+                  <label for="{{ attr.attr_title }}">{{ pro_attr.int_value }} عدد</label>
+                {% elif pro_attr.value_type == 'TXT' %}
+                  <input type="checkbox" id="{{ attr.attr_title }}" name="{{ attr }}" value="{{ pro_attr.text_value }}">
+                  <label for="{{ attr.attr_title }}">{{ pro_attr.text_value }}</label>
+                {% endif %}
+              
+            </li>
+            {% endfor %}
+          </ul>
+        
+        {% endfor %}
+        <input type="submit" value="Submit" class="btn btn-primary">
+      </form> 
 
     </div>
     <div class="col-md-10">
