--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -83,9 +83,12 @@
 						<span class="txt1">
 							  حساب کاربری ندارید؟
 						</span>
-
-						<a class="txt2" href="singup">
-							 <b> ثبت نام</b> 						</a>
+					
+					<hr>
+						<span><a class="txt2" href="{% url 'Supplier:singup' %}">
+							 <b>ثبت نام به عنوان فروشنده</b></a></span>
+						<span><a class="txt2" href="#">
+							 <b>ثبت نام به عنوان خریدار</b></a></span>
 					</div>
 				</form>
 			</div>
