--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -58,3 +58,26 @@
 .mbottom-30{
   margin-bottom: 30px;
 }
+
+
+
+
+/* cart */
+.list-cart{
+  border: 1px solid #d8d8d8;
+    border-radius: 7px;
+    background-color: #f7f7f7;
+    margin-top: 20px;
+    padding:10px;
+}
+.list-cart ul{
+list-style: none;
+}
+.list-cart ul li h5{
+  font-size:15px;
+}
+.list-cart ul li img{
+  width: 100%;
+  border: 1px solid #d8d8d8;
+  border-radius: 2px;
+}
