--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     >
-    {% comment %}
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -18,8 +17,6 @@
     <link
       rel="stylesheet"
       href="{% static 'css/bootstrap.min.css' %}"
-    > {% endcomment %}
-
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -109,6 +106,18 @@
                 href="#"
               >Something else here</a>
             </div>
+                    {% if user.is_authenticated %}
+            <div class="mr-auto">
+              <a class="btn btn-success mb-1 mt-1 ml-2" id="DashbordBtn" href="{% url 'customer:profile' %}"><i
+                  class="fa fa-user ml-1"></i>
+                پنل {{user}}</a>
+
+              <a class="btn btn-success mb-1 mt-1 ml-2" href="{% url 'customer:logout' %}">خروج</a>
+             </div>
+              {% else %}
+                    <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'customer:login' %}">ورود/ثبت نام مشتریان</a>
+                    <a class="btn btn-warning mb-1 mt-1 mr-auto ml-2" href="{% url 'customer:login' %}">ورود/ثبت نام فروشندگان</a>
+              {% endif %}
           </li>
           <li class="nav-item">
             <a
@@ -118,8 +127,6 @@
               aria-disabled="true"
             >Disabled</a>
           </li>
-          <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'customer:login' %}">ورود/ثبت نام مشتریان</a>
-          <a class="btn btn-warning mb-1 mt-1 mr-auto ml-2" href="{% url 'customer:login' %}">ورود/ثبت نام فروشندگان</a>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input
