--- a/content/templates/content/products.html
+++ b/content/templates/content/products.html
@@ -94,7 +94,7 @@
             <h6>{{ product.product_name }}</h6>
             <ul>
               {% comment %} <li>2876000 <span class="toman">تومان</span></li> {% endcomment %}
-              <button>افزودن به سبد خرید</button>
+              {% comment %} <button>افزودن به سبد خرید</button> {% endcomment %}
             </ul>
 
           </a>
