--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -80,6 +80,8 @@ list-style: none;
   width: 100%;
   border: 1px solid #d8d8d8;
   border-radius: 2px;
+}
+
 .nav-bar {
   background: url(top-image-1.png) #6cba29 repeat 100% 35%;
   min-height: 60px;
