add multi user type

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,18 +118,22 @@
             >Disabled</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
           >
-          <button
-            class="btn btn-outline-success my-2 my-sm-0"
-            type="submit"
-          >Search</button>
-        </form>
+          <</li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+          hello {{ user }}
+          </li>
+          <a class = 'btn btn-success mb-1 mt-1 ml-2'>داشبورد</a>
+          <a class = 'btn btn-success mb-1 mt-1' href = "{% url 'accounts:logout'%}">خروج</a>
+
+          {% else %}
+          <li>
+            <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'accounts:login' %}">ورود</a>
+            <a class="btn btn-success mb-1 mt-1 mr-auto ml-2" href="{% url 'accounts:register' %}">ثبت نام</a>
+          </li>
+          {% endif %}
+        </ul> 
       </div>
     </nav>
     <div>
