--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,12 @@
               href="{% url 'content:categories' %}"
             >دسته بندی محصولات <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item active">
+            <a
+              class="nav-link"
+              href="{% url 'blog:home' %}"
+            >بلاگ <span class="sr-only">(current)</span></a>
+          </li>
           <li class="nav-item">
             <a
               class="nav-link"
